<resources>
    <string name="app_name">Sveriges Riksdag</string>

    <string name="action_settings">Inställningar</string>
    <string name="action_about">Om</string>
    <string name="action_help">Hjälp</string>

    <string name="progress_bar_message">Loading&#8230;</string>

    <!-- navigation drawer -->
    <string name="drawer_open">Öppna</string>
    <string name="drawer_close">Stäng</string>
    <string name="navigation_drawer_content_document">Dokument</string>
    <string name="navigation_drawer_content_members">Ledamöter</string>
    <string name="navigation_drawer_content_voting">Voteringar</string>
    <string name="navigation_drawer_content_speeches">Anföranden</string>
    <string name="navigation_drawer_content_calendar">Kalender</string>

    <!-- dialog fragments -->
    <string name="about_dialog_fragment_title">Om Appen</string>
    <string name="about_dialog_fragment_pos_btn">OK</string>
    <string name="about_dialog_fragment_message">Denna app använder sig av information hämtad
    från Sveriges Riksdags öppna data.
        Riksdagens öppna data består av cirka 200 000 dokument och statusuppgifter från så långt
        bak i tiden som 1961.\n\n\nUtvecklad av Marcus Jacobsson</string>

    <!-- calendar -->
    <string name="calendar_fragment_chamber">Kammaren</string>
    <string name="calendar_fragment_committee">Utkotten och EU-nämnden</string>
    <string name="calendar_fragment_other">Övriga kalenderhändelser</string>

    <string name="calendar_list_activity_content_all">Alla sammanträden</string>
    <string name="calendar_list_activity_content_press_conference">Presskonferens</string>
    <string name="calendar_list_activity_content_open_conference">Öppen presskonferens</string>
    <string name="calendar_list_activity_content_open_questioning">Öppen ufrågning</string>
    <string name="calendar_list_activity_content_open_meeting">Öppet sammanträde</string>
    <string name="calendar_list_activity_content_open_consultation">Öppet samråd</string>
    <string name="calendar_list_activity_content_open_seminar">Öppet seminarium</string>

    <!-- urls -->
    <string name="url_calendar_chamber">http://data.riksdagen.se/kalender/?org=kamm&amp;utformat=xml</string>
    <string name="url_calendar_committee_all">http://data.riksdagen.se/kalender/?org=AU&amp;org=BoU&amp;org=CU&amp;org=eun&amp;org=FiU&amp;org=F&#214;&amp;org=JoU&amp;org=JuU&amp;org=KU&amp;org=KrU&amp;org=LU&amp;org=MjU&amp;org=NU&amp;org=JuSoU&amp;org=KUU&amp;org=UF&#214;U&amp;org=UMJU&amp;org=USoU&amp;org=SkU&amp;org=SfU&amp;org=SoU&amp;org=TU&amp;org=UbU&amp;org=UU&amp;utformat=xml</string>
    <string name="url_calendar_committee_press_conference">http://data.riksdagen.se/kalender/?akt=pk&amp;utformat=xml</string>
    <string name="url_calendar_committee_open_press_conference">http://data.riksdagen.se/kalender/?akt=ko&amp;utformat=xml</string>
    <string name="url_calendar_committee_open_questioning">http://data.riksdagen.se/kalender/?akt=ou&amp;utformat=xml</string>
    <string name="url_calendar_committee_open_meeting">http://data.riksdagen.se/kalender/?akt=st&amp;utformat=xml</string>
    <string name="url_calendar_committee_open_consultation">http://data.riksdagen.se/kalender/?akt=os&amp;utformat=xml</string>
    <string name="url_calendar_committee_open_seminar">http://data.riksdagen.se/kalender/?akt=se&amp;utformat=xml</string>
    <string name="url_calendar_other">http://data.riksdagen.se/kalender/?akt=be&amp;akt=ib&amp;akt=re&amp;akt=ur&amp;akt=ub&amp;akt=oh&amp;utformat=xml</string>

    <!-- activity_calendar_details.xml -->
    <string name="activity_calendar_details_created">"Skapad: "</string>
    <string name="activity_calendar_details_last_modified">"Senast ändrad: "</string>
    <string name="activity_calendar_details_location">"Plats: "</string>
    <string name="activity_calendar_details_comment">"Kommentar: "</string>
    <string name="activity_calendar_details_summary">"Summering: "</string>
    <string name="activity_calendar_details_description">Beskrivning:</string>
    
    <!-- HelpFragment -->
    <string name="help_fragment_documents">Dokument</string>
    <string name="help_fragment_members">Ledamöter</string>
    <string name="help_fragment_voting">Voteringar</string>
    <string name="help_fragment_speeches">Anföranden</string>
    <string name="help_fragment_calendar">Kalender</string>
    <string name="help_fragment_documents_details">I dokumenten ingår bland annat riksdagsbeslut, regeringens propositioner, ledamöternas motioner och protokoll från kammaren. Vissa dokumenttyper finns från 1961.</string>
    <string name="help_fragment_members_details">Information om alla ledamöter som sitter eller har suttit i riksdagen finns från omkring 1990. Det finns uppgifter om ledamoten, olika uppdrag och vad ledamoten sagt och gjort.</string>
    <string name="help_fragment_voting_details">När kammarens ledamöter är oense i en fråga kan det bli omröstning, votering. Uppgifter om voteringarna finns från riksmötet 2002/03 och framåt.</string>
    <string name="help_fragment_speeches_details">De tal som riksdagsledamöterna håller under debatter i kammaren kallas anföranden. Anföranden finns från riksmötet 1993/94 och framåt.</string>
    <string name="help_fragment_calendar_details">I kalenderinformationen ingår alla debatter, beslut och andra aktiviteter i kammaren samt utskottens och EU-nämndens sammanträden, öppna utfrågningar och utlandsbesök.</string>

    <!-- MemberFragment -->
    <string name="member_fragment_search">Hitta</string>
    <string name="member_fragment_first_name">"Förnamn: "</string>
    <string name="member_fragment_last_name">"Efternamn: "</string>
    <string name="member_fragment_first_name_hint">Ange förnamn (valfritt)</string>
    <string name="member_fragment_last_name_hint">Ange efternamn (valfritt)</string>
    <string name="member_fragment_party">"Parti: </string>
    <string name="member_fragment_district">"Valkrets: "</string>

    <!-- member_fragment_spinner_party_items -->
    <string name="member_fragment_spinner_party_items_default">Välj (valfritt)</string>
    <string name="member_fragment_spinner_party_items_soc">Socialdemokraterna</string>
    <string name="member_fragment_spinner_party_items_m">Moderata samlingspartiet</string>
    <string name="member_fragment_spinner_party_items_mp">Miljöpartiet</string>
    <string name="member_fragment_spinner_party_items_fp">Folkpartiet</string>
    <string name="member_fragment_spinner_party_items_c">Centerpartiet</string>
    <string name="member_fragment_spinner_party_items_sd">Sverigedemokraterna</string>
    <string name="member_fragment_spinner_party_items_v">Vänsterpartiet</string>
    <string name="member_fragment_spinner_party_items_kd">Kristdemokraterna</string>

    <!-- member_fragment_spinner_district_items -->
    <string name="member_fragment_spinner_district_items_default">Välj (valfritt)</string>
    <string name="member_fragment_spinner_district_items_blekinge">Blekinge län</string>
    <string name="member_fragment_spinner_district_items_dalarna">Dalarnas län</string>
    <string name="member_fragment_spinner_district_items_gotland">Gotlands län</string>
    <string name="member_fragment_spinner_district_items_gavleborg">Gävleborgs län</string>
    <string name="member_fragment_spinner_district_items_goteborg">Göteborgs kommun</string>
    <string name="member_fragment_spinner_district_items_hallands">Hallands län</string>
    <string name="member_fragment_spinner_district_items_jamtlands">Jämtlands län</string>
    <string name="member_fragment_spinner_district_items_jonkoping">Jönköpings län</string>
    <string name="member_fragment_spinner_district_items_kalmar">Kalmars län</string>
    <string name="member_fragment_spinner_district_items_kronoberg">Kronobergs län</string>
    <string name="member_fragment_spinner_district_items_malmo">Malmö kommun</string>
    <string name="member_fragment_spinner_district_items_norrbotten">Norrbottens kommun</string>
    <string name="member_fragment_spinner_district_items_skane_norr_ost">Skåne läns norra och östra</string>
    <string name="member_fragment_spinner_district_items_skane_soder">Skåne läns södra</string>
    <string name="member_fragment_spinner_district_items_skane_vast">Skåne läns västra</string>
    <string name="member_fragment_spinner_district_items_stockholm">Stockholms kommun</string>
    <string name="member_fragment_spinner_district_items_stockholm_lan">Stockholms län</string>
    <string name="member_fragment_spinner_district_items_sodermananlands">Södermanlands län</string>
    <string name="member_fragment_spinner_district_items_uppsala">Uppsala län</string>
    <string name="member_fragment_spinner_district_items_varmlands">Värmlands län</string>
    <string name="member_fragment_spinner_district_items_vasterbotten">Västerbottens län</string>
    <string name="member_fragment_spinner_district_items_vasternorrlands">Västernorrlands län</string>
    <string name="member_fragment_spinner_district_items_vastmanlands">Västmanlands län</string>
    <string name="member_fragment_spinner_district_items_vastra_gotalands">Västra Götalands läns norra</string>
    <string name="member_fragment_spinner_district_items_vastra_gotalands_soder">Västra Götalands läns södra</string>
    <string name="member_fragment_spinner_district_items_vastra_gotalands_vast">Västra Götalands läns västra</string>
    <string name="member_fragment_spinner_district_items_vastra_gotalands_ost">Västra Götalands läns östra</string>
    <string name="member_fragment_spinner_district_items_orebro">Örebro län</string>
    <string name="member_fragment_spinner_district_items_ostergotland">Östergötlands län</string>

    <!-- activity_member_details -->
    <string name="activity_member_details_name">Namn:</string>
    <string name="activity_member_details_born">Född:</string>
    <string name="activity_member_details_sex">Kön:</string>
    <string name="activity_member_details_party">Parti:</string>
    <string name="activity_member_details_district">Distrikt:</string>
    <string name="activity_member_details_status">Status:</string>
    <string name="activity_member_details_assignments">Uppdrag:</string>
    <string name="activity_member_details_send_email">Skicka mail med&#8230;</string>

    <!-- member_assignment_list_item -->
    <string name="member_assignment_list_item_role">Roll</string>
    <string name="member_assignment_list_item_dt_start">Från</string>
    <string name="member_assignment_list_item_dt_end">Till</string>

</resources>
