<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:clickable="true"
        android:id="@+id/tv_calendar_fragment_chamber"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/calendar_fragment_chamber"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:clickable="true"
        android:id="@+id/tv_calendar_fragment_committee"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/calendar_fragment_committee"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:clickable="true"
        android:id="@+id/tv_calendar_fragment_other"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/calendar_fragment_other"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>